--- a/_config.yml
+++ b/_config.yml
@@ -55,8 +55,8 @@ author:
 
 ## => GitHub Repository (if the site is hosted by GitHub)
 ##############################
-repository: user_name/repo_name
-repository_tree: master
+repository: thiswv/thiswv.github.io
+repository_tree: main
 
 
 ## => Paths
